working draw phase